cmake_minimum_required(VERSION 2.8)

set(CMAKE_CXX_STANDARD 11)
set(PROJECT_NAME mp2-lab13-plex)
project(${PROJECT_NAME})

set(BaseLib BaseLib) 
set(CanvasLib CanvasLib) 
set(LineLib LineLib) 
set(PlexLib PlexLib) 
set(PointLib PointLib) 
set(SquareLib SquareLib)
set(StackLib StackLib)
set(main main)

set(CMAKE_CONFIGURATION_TYPES "Debug;Release" CACHE STRING "Configs" FORCE)
if(NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE Release)
endif()

include_directories(${CMAKE_CURRENT_SOURCE_DIR}/BaseLib) 
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/CanvasLib) 
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/LineLib) 
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/PlexLib) 
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/PointLib) 
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/SquareLib)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/StackLib)


add_subdirectory(BaseLib)
add_subdirectory(CanvasLib)
add_subdirectory(LineLib)
add_subdirectory(PlexLib)
add_subdirectory(PointLib)
add_subdirectory(SquareLib)
add_subdirectory(StackLib)
add_subdirectory(main)
add_subdirectory(gtest)
add_subdirectory(test)